# parakit

./: .gitignore  Dockerfile  LICENSE  MANUAL.md  README.md  pyproject.toml
data/: CYP21A2.gencodev43.nearby_genes.tsv  CYP21A2.pathogenic.variant_summary.20231127.txt  CYP21A2.pathogenic.variant_summary.2024_09_03.tsv  README.md  Snakefile  extract-rccx-coords.Rmd  extract-rccx-coords.md  extract-rccx-region-coords.Rmd  extract-rccx-region-coords.md  guess.rccx.modules.Rmd  hprc.cyp21a.coords.tsv  hprc.cyp21a.haps.coords.tsv  hprc.ensembl.gff3.paths.tsv  prepare-annotations.R  rccx.grch38.mc.config.json  rccx.grch38.mc.node_info.tsv  rccx.grch38.mc.pg.gfa  rccx.grch38_hprc.mc.config.json  rccx.grch38_hprc.mc.node_info.tsv  rccx.grch38_hprc.mc.pg.gfa  rccx.grch38_hprc.mcc.config.json  rccx.grch38_hprc.mcc.node_info.tsv  rccx.grch38_hprc.pggb.node_info.tsv  rccx.mc.summary.Rmd  rccx.mc.summary.md  rccx.summary.Rmd  rccx.summary.md
paper/: README.md  rccx.grch38_hprc.mc.config.json
paper/data/: README.md  rccx.grch38_hprc.mc.config.json  rccx.grch38_hprc.mc.node_info.tsv  testsample.chr6_31800000_32200000.bam.bai
paper/figures/: fig6.R  figS6.R  figS7.R  figS8.R
paper/testsample_output/: testsample.rccx.grch38_hprc.mc.calls.tsv
src/parakit/: main.py  parakit.viz.R  parakit_class.py  parakit_io.py  parakit_path.py  parakit_path_original.py  parakit_process.py  parakit_sim.py  parakit_surject.py  parakit_variants.py
test/: README.md  Snakefile  sim.config.tsamp1.json  sim.config.tsamp2.json  sim.config.tsamp3.json
